apps/base/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
spec:
  selector:
    app: prowlarr
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/instance: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
      protocol: TCP
    - name: flaresolverr
      port: 8191
      targetPort: 8191
      protocol: TCP
