apps/base/prowlarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  name: http
